
This release includes:

- Updated jQuery to 1.8.2 and jQuery UI to 1.9.0
- Updated Apache Camel to 2.10.1, Apache Derby to 10.9.1.0, Apache
  Jackrabbit to 2.5.2, Apache Shiro to 1.2.1, ehcache to 2.6.0, Groovy to
  2.0.5, and Quartz Scheduler to 2.1.6
- Support for Spock specification and unit testing framework run with the
  gradle "test" task, and a few entity and service unit tests
- Screen Facade
  - Added popup type subscreens menu using new jQuery UI Menu widget to
    help compress header into single row of menus instead of layers of tabs
  - Moved JS file reference to webroot.xml instead of in the theme; all
    themes need them, and they are more closely related to HTML generated
  - Added subscreens.always-use-full-path attribute to use the full path in
    menus and such instead of minimal path; helpful for wiki and other
    screens that use relative URLs that are not based on the screen path
  - More support for configuring case-insensitive order-by
  - Added dynamic-options for drop-down to get options from a server
    request via AJAX request and can depend on other field(s) to use as
    parameters and triggers for updating options on change, including
    example in the EditExample screen
- Service Facade
  - Inline and script services can leave out parameter values in the
    context and they will be picked up, instead of setting explicitly in
    result Map
  - When auto-parameters has an entity-name specified the generated
    parameters will have entity-name and field-name attributes, and the
    auto-fields-service now looks for those to do better fields based on
    the entity field details
- Entity Facade
  - Added datasource.@startup-add-missing option; set to true to check
    tables for all entities in the database on startup and create missing
    ones
  - Entity find on a view-entity now automatically determines which
    member-entities to join in based on the fields selected, in order by,